stop failing heartbeat for no signatures because signature rates fluctuate through the day too much. warn instead, but no alert

--- a/app/assets/stylesheets/admin/heartbeat.css.scss
+++ b/app/assets/stylesheets/admin/heartbeat.css.scss
@@ -9,3 +9,7 @@
 .failing {
     color: #f00;
 }
+
+.warning {
+    color: #f60;
+}
